snapshot-tests/tests/snapshots/parser__bad_floats__no_digit_after_neg.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidInteger]: invalid integer: expected digit after sign at `a`
  ┌─ no_digit_after_neg:1:5
  │
1 │ a = -_2
  │     ^^^ invalid integer: expected digit after sign
