snapshot-tests/tests/snapshots/parser__bad_floats__trailing_exp2.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-float]: 
  ┌─ trailing_exp2:1:5
  │
1 │ a = 0.E
  │     ^ invalid float: nothing after decimal point
