snapshot-tests/tests/snapshots/parser__bad_floats__trailing_pos.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[InvalidFloat]: invalid float: exponent requires at least one digit at a
  ┌─ trailing_pos:1:5
  │
1 │ a = 0.0e+
  │     ^ invalid float: exponent requires at least one digit
